# hemera

./: .gitignore  CONTRIBUTING.md  Cargo.toml  QUICK_REFERENCE.md  README.md  test_expand.rs
.github/workflows/: ci.yml
benches/: overhead.rs
benches/criterion/macro_overhead/baseline/base/: tukey.json
benches/criterion/macro_overhead/baseline/change/: estimates.json
benches/criterion/macro_overhead/baseline/new/: benchmark.json  estimates.json  sample.json
benches/criterion/macro_overhead/baseline/report/: index.html
benches/criterion/macro_overhead/instrumented/base/: benchmark.json  estimates.json
benches/criterion/macro_overhead/instrumented/change/: estimates.json
benches/criterion/macro_overhead/instrumented/new/: sample.json  tukey.json
benches/criterion/macro_overhead/instrumented/report/: index.html
benches/criterion/macro_overhead/report/: index.html
benches/criterion/report/: index.html
examples/: Cargo.toml  async_example.rs  basic.rs
src/: lib.rs
tests/: ui.rs
tests/ui/: fail_invalid_level.rs  fail_invalid_level.stderr  fail_invalid_threshold.rs  fail_invalid_threshold.stderr  pass_basic.rs  pass_generics.rs
